--- a/services/frontend/src/Pages/Components/Navigation/nav.css
+++ b/services/frontend/src/Pages/Components/Navigation/nav.css
@@ -154,3 +154,10 @@
 .confirm-popup-content button:last-of-type:hover {
     background-color: #b9b9b9;
 }
+
+.ContainerNav00{
+    height: 100%;
+    display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
